[package]
name = "aws-util"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.0"
aws-sdk-s3 = { version = "1.31.0", features = ["behavior-version-latest"] }
bytes = "1.6.0"
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
vectorlink-task = {git = "https://github.com/terminusdb-hub/vectorlink", branch="dev"}
futures = "0.3.30"
async-stream = "0.3.5"
tokio-stream = "0.1.15"
